// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`rendered AGENTS.md snapshot: local / cs 1`] = `
"# Lazurio
<!-- base-instructions-7; {"preset":"local","profile":{"os":"macos","access":"local","purpose":"human","locale":"cs","detail":"concise","coordination":"direct"}} -->
## Tahle Mašina
- Preset: \`local\` (verze 1).
- Pracovní stanice Principála bez handoveru; Owner i Principál je přihlášený uživatel.
## Hranice
- Personalspace: \`personalspace/\` je intimní prostor právě jednoho Principála a jeho volitelného Buddyho. Nikdo cizí ho nečte a nikdy se nesdílí.
- Organizace: repozitáře žijí v \`organizations/<org>/\`; každá Organizace je vlastní access hranice a vlastní git repozitář.
- Identita: Principálova vlastní přihlášení; GitHub je jediná autorita přístupů.
## Jak se tu pracuje
- Komunikuj česky, pokud uživatel nepožádá jinak.
- Začni výsledkem a vysvětluj stručně.
- Pracuj přímo v rozsahu zadání a dostupných nástrojů.
- Tvoje práce je Draft ve worktree a pull requestu; Publikace (merge, nasazení, odeslání) patří Principálovi a vyžaduje jeho explicitní pokyn v aktuálním threadu.
- Před prací v Organizaci načti její aktuální AGENTS.md v \`organizations/<org>/\`; pravidla Organizace platí uvnitř jejího checkoutu a tenhle dokument je nenahrazuje. Z rootu Folderu se v konkrétní Organizaci nepracuje.
- Ověř systém provádějící Mašiny (macos); přístup local nemění identitu ani oprávnění. Pro připojené operace ověř živou identitu a práva; lokální checkout není důkaz oprávnění.
- Profil neuděluje přístup, publikační mandát ani oprávnění k práci na pozadí. Nečti cizí Personalspace a nekopíruj přihlašovací údaje.
- Zachovej existující cesty a obsah Organizations a Personalspace. Jazyk profilu nepřejmenovává složky ani nepřekládá uživatelská data.
- Chybějící nástroje, neověřená práva a neznámý stav přiznej; nevymýšlej dostupné schopnosti ani úspěšné dokončení.
## Manuál
Úplný manuál pro agenty na téhle Mašině je v \`manual/\` (generuje ho produkt, needituj ho):
- [Lazurio](manual/lazurio.md) — co je Lazurio, model spolupráce a jeho hranice.
- [Tahle Mašina](manual/this-machine.md) — druh, Owner, preset, zóny, co kam smí a SSH na další Mašiny.
- [Jak se tu pracuje](manual/working-here.md) — Draft, Publikace, worktrees, handoff a kam patří poznatky.
- [Role](manual/roles.md) — Principál, Kolega, role v Organizaci, Owner, Buddy, Task Agent.
- [Slovník](manual/glossary.md) — pojmy, které agent na Mašině potřebuje.
- [Řešení problémů](manual/troubleshooting.md) — aktualizace produktu a obsahu, Machine identita, odmítnutí a hlášení problémů.
"
`;

exports[`rendered AGENTS.md snapshot: local / en 1`] = `
"# Lazurio
<!-- base-instructions-7; {"preset":"local","profile":{"os":"macos","access":"local","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`local\` (version 1).
- The Principal's own workstation, no handover; the signed-in user is both Owner and Principal.
## Boundaries
- Personalspace: \`personalspace/\` is the intimate space of exactly one Principal and their optional Buddy. Nobody else reads it and it is never shared.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the execution Machine's OS (macos); local access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
## Manual
The complete agent manual for this Machine is in \`manual/\` (generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Machine](manual/this-machine.md) — kind, Owner, preset, zones, what may reach what and SSH to other Machines.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, handoff and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent on a Machine needs.
- [Troubleshooting](manual/troubleshooting.md) — product and content updates, Machine identity, refusals and reporting.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-personal / cs 1`] = `
"# Lazurio
<!-- base-instructions-7; {"preset":"hosted-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"cs","detail":"concise","coordination":"direct"}} -->
## Tahle Mašina
- Preset: \`hosted-personal\` (verze 1).
- Mašina: \`example\` (personal-vm).
- Owner: Principál s GitHub loginem \`example\` (id 12345). Je to jeho jediná osobní hostovaná Mašina.
- Principál: Owner Mašiny. Agenti tu jednají za něj v jeho právech; Buddy je volitelný rezident téže Mašiny.
- Tailnet: Headscale node \`example\`.
- Host: provider-estate \`example-estate\`; vyšší doména správy a obnovy než tahle Mašina.
## Hranice
- Personalspace: \`personalspace/\` je intimní prostor právě jednoho Principála a jeho volitelného Buddyho. Nikdo cizí ho nečte a nikdy se nesdílí.
- Organizace: na osobní Mašině nejsou namountovaná žádná repa Organizací. Práce v Organizaci (kód, repozitáře, běhy) probíhá přes SSH na pracovní VM, kterou ti Principál potvrdí jako přiřazenou jemu; repozitáře Organizací sem nikdy neklonuj.
- Identita: Principálova vlastní přihlášení; GitHub je jediná autorita přístupů.
## Jak se tu pracuje
- Komunikuj česky, pokud uživatel nepožádá jinak.
- Začni výsledkem a vysvětluj stručně.
- Pracuj přímo v rozsahu zadání a dostupných nástrojů.
- Tvoje práce je Draft ve worktree a pull requestu; Publikace (merge, nasazení, odeslání) patří Principálovi a vyžaduje jeho explicitní pokyn v aktuálním threadu.
- Před prací v Organizaci načti její aktuální AGENTS.md v \`organizations/<org>/\`; pravidla Organizace platí uvnitř jejího checkoutu a tenhle dokument je nenahrazuje. Z rootu Folderu se v konkrétní Organizaci nepracuje.
- Ověř systém provádějící Mašiny (linux); přístup remote nemění identitu ani oprávnění. Pro připojené operace ověř živou identitu a práva; lokální checkout není důkaz oprávnění.
- Profil neuděluje přístup, publikační mandát ani oprávnění k práci na pozadí. Nečti cizí Personalspace a nekopíruj přihlašovací údaje.
- Zachovej existující cesty a obsah Organizations a Personalspace. Jazyk profilu nepřejmenovává složky ani nepřekládá uživatelská data.
- Chybějící nástroje, neověřená práva a neznámý stav přiznej; nevymýšlej dostupné schopnosti ani úspěšné dokončení.
- SSH na jinou Mašinu jen na její tailnet hostname, s pinnutým host klíčem a po ověření aktivního tailnetu, nikdy na holou adresu \`100.64.0.x\` (\`manual/this-machine.md\`).
- Verzi produktu a tenhle Folder aktualizuje provozovatel Machines (Machines operator) přes pinnutý release; nespouštěj tu \`lazurio update\`. Nástroje operátora (Codex, Claude Code, \`gh\`, Node, npm, Bun…) pin nevlastní: aktualizuj je jen na výslovný pokyn Principála oficiálním instalátorem daného nástroje, jinak jen nahlas jejich verze (\`manual/troubleshooting.md\`, decision 0161).
## Manuál
Úplný manuál pro agenty na téhle Mašině je v \`manual/\` (generuje ho produkt, needituj ho):
- [Lazurio](manual/lazurio.md) — co je Lazurio, model spolupráce a jeho hranice.
- [Tahle Mašina](manual/this-machine.md) — druh, Owner, preset, zóny, co kam smí a SSH na další Mašiny.
- [Jak se tu pracuje](manual/working-here.md) — Draft, Publikace, worktrees, handoff a kam patří poznatky.
- [Role](manual/roles.md) — Principál, Kolega, role v Organizaci, Owner, Buddy, Task Agent.
- [Slovník](manual/glossary.md) — pojmy, které agent na Mašině potřebuje.
- [Řešení problémů](manual/troubleshooting.md) — aktualizace produktu a obsahu, Machine identita, odmítnutí a hlášení problémů.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-personal / en 1`] = `
"# Lazurio
<!-- base-instructions-7; {"preset":"hosted-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`hosted-personal\` (version 1).
- Machine: \`example\` (personal-vm).
- Owner: the Principal with GitHub login \`example\` (id 12345). This is their one personal hosted Machine.
- Principal: the Machine's Owner. Agents here act for them within their rights; a Buddy is an optional resident of this same Machine.
- Tailnet: Headscale node \`example\`.
- Host: provider-estate \`example-estate\`; a higher administration and recovery domain than this Machine.
## Boundaries
- Personalspace: \`personalspace/\` is the intimate space of exactly one Principal and their optional Buddy. Nobody else reads it and it is never shared.
- Organizations: no Organization repositories are mounted on a personal Machine. Organization work (code, repositories, runs) happens over SSH on a work VM the Principal confirms is assigned to them; never clone Organization repositories here.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the execution Machine's OS (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
- SSH to another Machine only to its tailnet hostname, with a pinned host key and after verifying the active tailnet, never to a bare \`100.64.0.x\` address (\`manual/this-machine.md\`).
- The product version and this Folder are updated by the Machines operator through the pinned release; do not run \`lazurio update\` here. The operator's tools (Codex, Claude Code, \`gh\`, Node, npm, Bun…) are not owned by the pin: update one only on the Principal's explicit instruction with that tool's official installer, otherwise only report their versions (\`manual/troubleshooting.md\`, decision 0161).
## Manual
The complete agent manual for this Machine is in \`manual/\` (generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Machine](manual/this-machine.md) — kind, Owner, preset, zones, what may reach what and SSH to other Machines.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, handoff and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent on a Machine needs.
- [Troubleshooting](manual/troubleshooting.md) — product and content updates, Machine identity, refusals and reporting.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-organization-personal / cs 1`] = `
"# Lazurio
<!-- base-instructions-7; {"preset":"hosted-organization-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"cs","detail":"concise","coordination":"direct"}} -->
## Tahle Mašina
- Preset: \`hosted-organization-personal\` (verze 1).
- Mašina: \`workspace\` (workspace-vm).
- Owner: Organizace \`example\`.
- Principál: jediný Operátor, kterému Organizace tuhle pracovní VM přiřadila. Agenti jednají za něj v jeho živých právech.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; vyšší doména správy a obnovy než tahle Mašina.
## Hranice
- Personalspace: na Mašině vlastněné Organizací nikdy není. Nezakládej ho, nemountuj ho a nekopíruj sem osobní data ani přihlášení.
- Organizace: repozitáře žijí v \`organizations/<org>/\`; každá Organizace je vlastní access hranice a vlastní git repozitář.
- Identita: Principálova vlastní přihlášení; GitHub je jediná autorita přístupů.
## Jak se tu pracuje
- Komunikuj česky, pokud uživatel nepožádá jinak.
- Začni výsledkem a vysvětluj stručně.
- Pracuj přímo v rozsahu zadání a dostupných nástrojů.
- Tvoje práce je Draft ve worktree a pull requestu; Publikace (merge, nasazení, odeslání) patří Principálovi a vyžaduje jeho explicitní pokyn v aktuálním threadu.
- Před prací v Organizaci načti její aktuální AGENTS.md v \`organizations/<org>/\`; pravidla Organizace platí uvnitř jejího checkoutu a tenhle dokument je nenahrazuje. Z rootu Folderu se v konkrétní Organizaci nepracuje.
- Ověř systém provádějící Mašiny (linux); přístup remote nemění identitu ani oprávnění. Pro připojené operace ověř živou identitu a práva; lokální checkout není důkaz oprávnění.
- Profil neuděluje přístup, publikační mandát ani oprávnění k práci na pozadí. Nečti cizí Personalspace a nekopíruj přihlašovací údaje.
- Zachovej existující cesty a obsah Organizations a Personalspace. Jazyk profilu nepřejmenovává složky ani nepřekládá uživatelská data.
- Chybějící nástroje, neověřená práva a neznámý stav přiznej; nevymýšlej dostupné schopnosti ani úspěšné dokončení.
- SSH na jinou Mašinu jen na její tailnet hostname, s pinnutým host klíčem a po ověření aktivního tailnetu, nikdy na holou adresu \`100.64.0.x\` (\`manual/this-machine.md\`).
- Verzi produktu a tenhle Folder aktualizuje provozovatel Machines (Machines operator) přes pinnutý release; nespouštěj tu \`lazurio update\`. Nástroje operátora (Codex, Claude Code, \`gh\`, Node, npm, Bun…) pin nevlastní: aktualizuj je jen na výslovný pokyn Principála oficiálním instalátorem daného nástroje, jinak jen nahlas jejich verze (\`manual/troubleshooting.md\`, decision 0161).
## Manuál
Úplný manuál pro agenty na téhle Mašině je v \`manual/\` (generuje ho produkt, needituj ho):
- [Lazurio](manual/lazurio.md) — co je Lazurio, model spolupráce a jeho hranice.
- [Tahle Mašina](manual/this-machine.md) — druh, Owner, preset, zóny, co kam smí a SSH na další Mašiny.
- [Jak se tu pracuje](manual/working-here.md) — Draft, Publikace, worktrees, handoff a kam patří poznatky.
- [Role](manual/roles.md) — Principál, Kolega, role v Organizaci, Owner, Buddy, Task Agent.
- [Slovník](manual/glossary.md) — pojmy, které agent na Mašině potřebuje.
- [Řešení problémů](manual/troubleshooting.md) — aktualizace produktu a obsahu, Machine identita, odmítnutí a hlášení problémů.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-organization-personal / en 1`] = `
"# Lazurio
<!-- base-instructions-7; {"preset":"hosted-organization-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`hosted-organization-personal\` (version 1).
- Machine: \`workspace\` (workspace-vm).
- Owner: Organization \`example\`.
- Principal: the one operator the Organization assigned this work VM to. Agents act for them within their live rights.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; a higher administration and recovery domain than this Machine.
## Boundaries
- Personalspace: never present on an Organization-owned Machine. Do not create or mount one and never copy personal data or sign-ins here.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the execution Machine's OS (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
- SSH to another Machine only to its tailnet hostname, with a pinned host key and after verifying the active tailnet, never to a bare \`100.64.0.x\` address (\`manual/this-machine.md\`).
- The product version and this Folder are updated by the Machines operator through the pinned release; do not run \`lazurio update\` here. The operator's tools (Codex, Claude Code, \`gh\`, Node, npm, Bun…) are not owned by the pin: update one only on the Principal's explicit instruction with that tool's official installer, otherwise only report their versions (\`manual/troubleshooting.md\`, decision 0161).
## Manual
The complete agent manual for this Machine is in \`manual/\` (generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Machine](manual/this-machine.md) — kind, Owner, preset, zones, what may reach what and SSH to other Machines.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, handoff and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent on a Machine needs.
- [Troubleshooting](manual/troubleshooting.md) — product and content updates, Machine identity, refusals and reporting.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-organization-team / cs 1`] = `
"# Lazurio
<!-- base-instructions-7; {"preset":"hosted-organization-team","profile":{"os":"linux","access":"remote","purpose":"human","locale":"cs","detail":"concise","coordination":"direct"}} -->
## Tahle Mašina
- Preset: \`hosted-organization-team\` (verze 1).
- Mašina: \`workspace\` (workspace-vm).
- Owner: Organizace \`example\`, Team \`sample-team\`.
- Principál: Kolega, který se právě připojil. OS účet je sdílený členy Teamu a není osoba; změny se připisují Teamu přes brokerovanou identitu Organizace.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; vyšší doména správy a obnovy než tahle Mašina.
## Hranice
- Personalspace: na Mašině vlastněné Organizací nikdy není. Nezakládej ho, nemountuj ho a nekopíruj sem osobní data ani přihlášení.
- Organizace: repozitáře žijí v \`organizations/<org>/\`; každá Organizace je vlastní access hranice a vlastní git repozitář.
- Identita: brokerovaná identita Organizace s krátkodobými tokeny; žádná osobní přihlášení, session ani credentials sem nikdy nepatří.
## Jak se tu pracuje
- Komunikuj česky, pokud uživatel nepožádá jinak.
- Začni výsledkem a vysvětluj stručně.
- Pracuj přímo v rozsahu zadání a dostupných nástrojů.
- Tvoje práce je Draft ve worktree a pull requestu; Publikace (merge, nasazení, odeslání) patří Principálovi a vyžaduje jeho explicitní pokyn v aktuálním threadu.
- Před prací v Organizaci načti její aktuální AGENTS.md v \`organizations/<org>/\`; pravidla Organizace platí uvnitř jejího checkoutu a tenhle dokument je nenahrazuje. Z rootu Folderu se v konkrétní Organizaci nepracuje.
- Ověř systém provádějící Mašiny (linux); přístup remote nemění identitu ani oprávnění. Pro připojené operace ověř živou identitu a práva; lokální checkout není důkaz oprávnění.
- Profil neuděluje přístup, publikační mandát ani oprávnění k práci na pozadí. Nečti cizí Personalspace a nekopíruj přihlašovací údaje.
- Zachovej existující cesty a obsah Organizations a Personalspace. Jazyk profilu nepřejmenovává složky ani nepřekládá uživatelská data.
- Chybějící nástroje, neověřená práva a neznámý stav přiznej; nevymýšlej dostupné schopnosti ani úspěšné dokončení.
- SSH na jinou Mašinu jen na její tailnet hostname, s pinnutým host klíčem a po ověření aktivního tailnetu, nikdy na holou adresu \`100.64.0.x\` (\`manual/this-machine.md\`).
- Verzi produktu a tenhle Folder aktualizuje provozovatel Machines (Machines operator) přes pinnutý release; nespouštěj tu \`lazurio update\`. Nástroje operátora (Codex, Claude Code, \`gh\`, Node, npm, Bun…) pin nevlastní: aktualizuj je jen na výslovný pokyn Principála oficiálním instalátorem daného nástroje, jinak jen nahlas jejich verze (\`manual/troubleshooting.md\`, decision 0161).
## Manuál
Úplný manuál pro agenty na téhle Mašině je v \`manual/\` (generuje ho produkt, needituj ho):
- [Lazurio](manual/lazurio.md) — co je Lazurio, model spolupráce a jeho hranice.
- [Tahle Mašina](manual/this-machine.md) — druh, Owner, preset, zóny, co kam smí a SSH na další Mašiny.
- [Jak se tu pracuje](manual/working-here.md) — Draft, Publikace, worktrees, handoff a kam patří poznatky.
- [Role](manual/roles.md) — Principál, Kolega, role v Organizaci, Owner, Buddy, Task Agent.
- [Slovník](manual/glossary.md) — pojmy, které agent na Mašině potřebuje.
- [Řešení problémů](manual/troubleshooting.md) — aktualizace produktu a obsahu, Machine identita, odmítnutí a hlášení problémů.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-organization-team / en 1`] = `
"# Lazurio
<!-- base-instructions-7; {"preset":"hosted-organization-team","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`hosted-organization-team\` (version 1).
- Machine: \`workspace\` (workspace-vm).
- Owner: Organization \`example\`, Team \`sample-team\`.
- Principal: whichever Team member is connected now. The OS account is shared by the Team and is not a person; changes are attributed to the Team through the brokered Organization identity.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; a higher administration and recovery domain than this Machine.
## Boundaries
- Personalspace: never present on an Organization-owned Machine. Do not create or mount one and never copy personal data or sign-ins here.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the brokered Organization identity with short-lived tokens; no personal sign-ins, sessions or credentials ever belong here.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the execution Machine's OS (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
- SSH to another Machine only to its tailnet hostname, with a pinned host key and after verifying the active tailnet, never to a bare \`100.64.0.x\` address (\`manual/this-machine.md\`).
- The product version and this Folder are updated by the Machines operator through the pinned release; do not run \`lazurio update\` here. The operator's tools (Codex, Claude Code, \`gh\`, Node, npm, Bun…) are not owned by the pin: update one only on the Principal's explicit instruction with that tool's official installer, otherwise only report their versions (\`manual/troubleshooting.md\`, decision 0161).
## Manual
The complete agent manual for this Machine is in \`manual/\` (generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Machine](manual/this-machine.md) — kind, Owner, preset, zones, what may reach what and SSH to other Machines.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, handoff and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent on a Machine needs.
- [Troubleshooting](manual/troubleshooting.md) — product and content updates, Machine identity, refusals and reporting.
"
`;

exports[`relationships render only when the recorded binding carries them, one line per peer 1`] = `
"# Lazurio
<!-- base-instructions-7; {"preset":"hosted-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`hosted-personal\` (version 1).
- Machine: \`example\` (personal-vm).
- Owner: the Principal with GitHub login \`example\` (id 12345). This is their one personal hosted Machine.
- Principal: the Machine's Owner. Agents here act for them within their rights; a Buddy is an optional resident of this same Machine.
- Tailnet: Headscale node \`example\`.
- Host: provider-estate \`example-estate\`; a higher administration and recovery domain than this Machine.
### Related Machines
Tailnet peers as the handover records them (this Machine is in the personal zone); Headscale enforces them, Lazurio does not.
- \`example-laptop\` (client device, personal zone): SSH both ways with \`example-laptop.tailnet.example.invalid\`; no HTTPS.
- \`example-workspace\` (work VM, work zone, Organization \`example\`): SSH from here to \`example-workspace.tailnet.example.invalid\` as \`operator\`; HTTPS \`launchpad.example-workspace.example.lazurio.io\`.
## Boundaries
- Personalspace: \`personalspace/\` is the intimate space of exactly one Principal and their optional Buddy. Nobody else reads it and it is never shared.
- Organizations: no Organization repositories are mounted on a personal Machine. Organization work (code, repositories, runs) happens over SSH on a work VM the Principal confirms is assigned to them; never clone Organization repositories here.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the execution Machine's OS (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
- SSH to another Machine only to its tailnet hostname, with a pinned host key and after verifying the active tailnet, never to a bare \`100.64.0.x\` address (\`manual/this-machine.md\`).
- The product version and this Folder are updated by the Machines operator through the pinned release; do not run \`lazurio update\` here. The operator's tools (Codex, Claude Code, \`gh\`, Node, npm, Bun…) are not owned by the pin: update one only on the Principal's explicit instruction with that tool's official installer, otherwise only report their versions (\`manual/troubleshooting.md\`, decision 0161).
## Manual
The complete agent manual for this Machine is in \`manual/\` (generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Machine](manual/this-machine.md) — kind, Owner, preset, zones, what may reach what and SSH to other Machines.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, handoff and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent on a Machine needs.
- [Troubleshooting](manual/troubleshooting.md) — product and content updates, Machine identity, refusals and reporting.
"
`;

exports[`the Assignment line renders the handover's owner.assignment and nothing else 1`] = `
"# Lazurio
<!-- base-instructions-7; {"preset":"hosted-organization-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`hosted-organization-personal\` (version 1).
- Machine: \`workspace\` (workspace-vm).
- Owner: Organization \`example\`.
- Assignment: assigned to operator \`example\` (GitHub id 12345).
- Principal: the one operator the Organization assigned this work VM to. Agents act for them within their live rights.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; a higher administration and recovery domain than this Machine.
## Boundaries
- Personalspace: never present on an Organization-owned Machine. Do not create or mount one and never copy personal data or sign-ins here.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the execution Machine's OS (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
- SSH to another Machine only to its tailnet hostname, with a pinned host key and after verifying the active tailnet, never to a bare \`100.64.0.x\` address (\`manual/this-machine.md\`).
- The product version and this Folder are updated by the Machines operator through the pinned release; do not run \`lazurio update\` here. The operator's tools (Codex, Claude Code, \`gh\`, Node, npm, Bun…) are not owned by the pin: update one only on the Principal's explicit instruction with that tool's official installer, otherwise only report their versions (\`manual/troubleshooting.md\`, decision 0161).
## Manual
The complete agent manual for this Machine is in \`manual/\` (generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Machine](manual/this-machine.md) — kind, Owner, preset, zones, what may reach what and SSH to other Machines.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, handoff and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent on a Machine needs.
- [Troubleshooting](manual/troubleshooting.md) — product and content updates, Machine identity, refusals and reporting.
"
`;

exports[`the Assignment line renders the handover's owner.assignment and nothing else 2`] = `
"# Lazurio
<!-- base-instructions-7; {"preset":"hosted-organization-team","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`hosted-organization-team\` (version 1).
- Machine: \`workspace\` (workspace-vm).
- Owner: Organization \`example\`, Team \`sample-team\`.
- Assignment: shared by the Team.
- Principal: whichever Team member is connected now. The OS account is shared by the Team and is not a person; changes are attributed to the Team through the brokered Organization identity.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; a higher administration and recovery domain than this Machine.
## Boundaries
- Personalspace: never present on an Organization-owned Machine. Do not create or mount one and never copy personal data or sign-ins here.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the brokered Organization identity with short-lived tokens; no personal sign-ins, sessions or credentials ever belong here.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the execution Machine's OS (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
- SSH to another Machine only to its tailnet hostname, with a pinned host key and after verifying the active tailnet, never to a bare \`100.64.0.x\` address (\`manual/this-machine.md\`).
- The product version and this Folder are updated by the Machines operator through the pinned release; do not run \`lazurio update\` here. The operator's tools (Codex, Claude Code, \`gh\`, Node, npm, Bun…) are not owned by the pin: update one only on the Principal's explicit instruction with that tool's official installer, otherwise only report their versions (\`manual/troubleshooting.md\`, decision 0161).
## Manual
The complete agent manual for this Machine is in \`manual/\` (generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Machine](manual/this-machine.md) — kind, Owner, preset, zones, what may reach what and SSH to other Machines.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, handoff and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent on a Machine needs.
- [Troubleshooting](manual/troubleshooting.md) — product and content updates, Machine identity, refusals and reporting.
"
`;

exports[`the Owner line names the Team only under hosted-organization-team 1`] = `
"# Lazurio
<!-- base-instructions-7; {"preset":"hosted-organization-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`hosted-organization-personal\` (version 1).
- Machine: \`workspace\` (workspace-vm).
- Owner: Organization \`example\`.
- Principal: the one operator the Organization assigned this work VM to. Agents act for them within their live rights.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; a higher administration and recovery domain than this Machine.
## Boundaries
- Personalspace: never present on an Organization-owned Machine. Do not create or mount one and never copy personal data or sign-ins here.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the execution Machine's OS (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
- SSH to another Machine only to its tailnet hostname, with a pinned host key and after verifying the active tailnet, never to a bare \`100.64.0.x\` address (\`manual/this-machine.md\`).
- The product version and this Folder are updated by the Machines operator through the pinned release; do not run \`lazurio update\` here. The operator's tools (Codex, Claude Code, \`gh\`, Node, npm, Bun…) are not owned by the pin: update one only on the Principal's explicit instruction with that tool's official installer, otherwise only report their versions (\`manual/troubleshooting.md\`, decision 0161).
## Manual
The complete agent manual for this Machine is in \`manual/\` (generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Machine](manual/this-machine.md) — kind, Owner, preset, zones, what may reach what and SSH to other Machines.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, handoff and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent on a Machine needs.
- [Troubleshooting](manual/troubleshooting.md) — product and content updates, Machine identity, refusals and reporting.
"
`;
